--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
 
         <div class="items-container">
-            <p>You have <span id="list-count"></span> items on your list today</p>
+            <p>You have <span id="list-count"></span> items on your list.</p>
 
             <ul class="item-list">
                 <li class="item"> Laundry <span class="delete">remove</span></li>
