error handling: cant add empty todo

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             <button id="submit">Add</button>
         </div>
 
+        <div class="error">
+            <p>Cant add empty item! Please enter a todo item.</p>
+        </div>
+
         <div class="items-container">
             <p>You have <span id="list-count"></span> items on your list.</p>
 
